# abn-rag

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.backend  README.md  docker-compose.yml  package-lock.json  pyproject.toml
.github/workflows/: build-push.yml  test.yml
backend/app/: _openai.py  answer.py  chunking.py  config.py  db.py  extracted_datapoints.py  extraction_page_scanner.py  ingestion.py  llama_extract_datapoints.py  openai_extract_datapoints.py  openai_table_vision.py  openai_validate_datapoints.py  parsers.py  pipeline.py  retrieval.py  schemas.py  server.py
backend/evals/: abn-2025.yaml  asml-2023-questions.yaml  asml-2025-questions.yaml  asml-abn-questions.yaml  heineken-2025.yaml  heineken-questions.yaml  questions-2025-multi-company.yaml  ragas_eval.py  runner.py
backend/tests/: test_answer.py  test_eval_runner.py  test_extracted_datapoints.py  test_ingestion.py  test_parsers.py  test_pipeline.py  test_retrieval.py
evals/: questions-2-highlights.yaml  questions-2-mvp.yaml  questions-2.yaml  questions-2025-multi-company.yaml  questions.yaml  runner.py
evals/runs_2/: 2026-04-29T06-42-25Z_10of22.json  2026-04-29T07-04-00Z_15of22.json  2026-04-29T07-32-49Z_07of22.json  2026-04-29T07-38-59Z_10of22.json  2026-04-29T07-47-42Z_15of22.json  2026-04-29T07-54-38Z_15of22.json  2026-04-29T08-00-23Z_14of22.json  2026-04-29T08-04-14Z_15of22.json  (+23 more)
frontend/: BACKEND_HANDOFF.md  README.md  Verbatim.html  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: diagnose_llamaparse_layout.py  enhance_tables_with_vision.py  index_pre_extracted_datapoints.py  run_pre_extraction.py  test_llama_extract_datapoints.py
tests/: test_answer.py  test_eval_runner.py  test_extracted_datapoints.py  test_extraction_page_scanner.py  test_ingestion.py  test_parsers.py  test_retrieval.py  test_runner.py
(+281 files in other folders)
