[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abn-rag"
version = "0.1.0"
description = "Local RAG over annual reports (ASML 2025 baseline)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "docling>=2.70",
    "llama-parse>=0.5",
    "pymupdf>=1.24",
    "chromadb>=0.5",
    "openai>=1.40",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "tiktoken>=0.7",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
