[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "annual-report-rag"
version = "0.1.0"
description = "Local RAG over annual reports (ASML 2025 baseline)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "llama-parse>=0.5",
    "chromadb>=0.5",
    "openai>=1.40",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "tiktoken>=0.7",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pymupdf>=1.24",
    "ragas>=0.2",
    "rank-bm25>=0.2.2",
    "langchain-openai>=0.2",
    "datasets>=2.0",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
ragas-eval = "backend.evals.ragas_eval:_cli"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
